# grpc_demo

./: CMakeLists.txt
grpc/: CMakeLists.txt
grpc/proto/: collect.proto
grpc/src/: CollectType.h  client.cc  client.h  collect.grpc.pb.cc  collect.grpc.pb.h  collect.pb.cc  collect.pb.h
src/: client.h  main.cpp
